fixed bugs on iphone

--- a/css/layout/section.less
+++ b/css/layout/section.less
@@ -1,5 +1,6 @@
 .section {
   box-shadow: inset 0 -1px 5px 0 @colorGray;
+  padding-bottom: 1.5rem;
   &:last-of-type {
     box-shadow: none;
   }
@@ -12,8 +13,6 @@
   align-items: flex-start;
 }
 
-
-
 .section__about-stat {
   margin-bottom: 2.5rem;
   &:last-child {
@@ -25,7 +24,6 @@
 
   .section {
     padding-top: 55px;
-    padding-bottom: 15px;
   }
 
   .section__title {
