--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,7 @@ p:last-child {
 }
 .section {
   box-shadow: inset 0 -1px 5px 0 #eee;
+  padding-bottom: 1.5rem;
 }
 .section:last-of-type {
   box-shadow: none;
@@ -185,7 +186,6 @@ p:last-child {
 @media screen and (min-width: 961px) {
   .section {
     padding-top: 55px;
-    padding-bottom: 15px;
   }
   .section__title {
     padding-bottom: 2rem;
